# Albatross

./: Makefile.am  README  README.md  configure.ac  index.theme
gtk-2.0/: gtkrc
gtk-3.0/: gtk-widgets-assets.css  gtk-widgets.css  gtk.css  settings.ini
gtk-3.0/apps/: gnome-applications.css  granite-widgets.css  unity.css  xfce.css
metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
shearwater/: gtkrc
usplash/: Makefile  usplash-theme-albatross.c
xfwm4/: README  bottom-active.xpm  bottom-inactive.xpm  bottom-left-inactive.xpm  bottom-right-inactive.xpm  close-inactive.xpm  hide-inactive.xpm  left-active.xpm  left-inactive.xpm  maximize-inactive.xpm  maximize-toggled-inactive.xpm  menu-inactive.xpm  right-active.xpm  right-inactive.xpm  shade-inactive.xpm  shade-toggled-inactive.xpm  stick-inactive.xpm  stick-toggled-inactive.xpm  themerc  title-1-inactive.xpm  title-2-inactive.xpm  title-3-inactive.xpm  title-4-inactive.xpm  title-5-inactive.xpm  top-left-inactive.xpm  top-right-inactive.xpm
