AC_INIT([Albatross ], 1.2, [https://github.com/shimmerproject/Albatross/issues],
 [Albatross], [http://shimmerproject.org/our-projects/albatross/])
AM_INIT_AUTOMAKE([1.11 foreign subdir-objects tar-ustar no-dist-gzip dist-xz -Wno-portability])
AM_SILENT_RULES([yes])

AC_PREFIX_DEFAULT(/usr)
AC_CONFIG_FILES([Makefile])
AC_OUTPUT

AC_MSG_RESULT([
        Albatross $VERSION
        ========
        prefix:                 ${prefix}

])
